--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,12 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.datastore:datastore-core:1.0.0'
 
+    // ROOM DATABASE
+    implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'androidx.room:room-runtime:2.4.2'
+    implementation 'androidx.room:room-paging:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
+
     // Pagination
     implementation 'androidx.paging:paging-common-ktx:3.1.1'
     implementation 'androidx.paging:paging-rxjava2-ktx:3.1.1'
