--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        maven { url 'https://www.jitpack.io' }
+    }
     dependencies {
         classpath 'androidx.navigation.safeargs:androidx.navigation.safeargs.gradle.plugin:2.4.2'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
